# openinference

./: .pre-commit-config.yaml
.agent-venv/: pyvenv.cfg
python/instrumentation/openinference-instrumentation-smolagents/: __init__.py  _wrappers.py  test_smolagents.py
python/instrumentation/openinference-instrumentation-smolagents/src/openinference/instrumentation/smolagents/: _wrappers.py
python/instrumentation/openinference-instrumentation-smolagents/tests/: test_smolagents.py  test_smolagents_instrumentation.py  test_wrappers.py
python/openinference-instrumentation/: pyproject.toml
tests/: test_docs_smoke.py  test_fix.py  test_non_recording_span.py  test_repro_issue_23.py  test_repro_issue_38.py  test_repro_issue_41.py  test_repro_issue_43.py  test_repro_issue_45.py  test_wrapt_version.py
