[tool.poetry]
name = "openinference-instrumentation"
version = "0.1.0"
description = "OpenInference instrumentation for various AI/ML frameworks"
authors = ["Arize AI <support@arize.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wrapt = "<3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"